# clanet

./: .clanet.example.yaml  .gitignore  CLAUDE.md  LICENSE  PLAN.md  README.md  clanet.yaml.example  context.example.yaml  context.yaml.example  inventory.example.yaml  inventory.yaml.example  pyproject.toml  requirements-dev.txt  requirements.txt
.claude/: CLAUDE.md  settings.json
.claude-plugin/: plugin.json
.claude/agents/: compliance-checker.md  network-operator.md  validator.md
.claude/commands/: audit.md  backup.md  check.md  clanet.md  cmd.md  commit.md  safety-guide.md  save.md  session.md  team.md  validate.md  why.md
.claude/skills/team/: SKILL.md
.githooks/: pre-push
.github/workflows/: auto-merge.yml  ci.yml  test.yml
agents/: compliance-checker.md  network-operator.md  planner.md  validator.md
commands/: audit.md  check.md  cmd-interact.md  cmd.md  config-load.md  config-quick.md  config.md  deploy.md  health-template.md  health.md  interactive.md  mode.md  safety-guide.md  team.md  why.md
docs/: README_ja.md
examples/: clanet.yaml  context.yaml  inventory.yaml
lib/: clanet_cli.py
policies/: default.yaml  example.yaml  health.yaml
skills/team/: SKILL.md
templates/: clanet.yaml  constitution.yaml  context.yaml  health.yaml  inventory.yaml  policy.yaml
tests/: test_cli.py
