[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "clanet"
version = "0.2.0"
description = "Network automation plugin for Claude Code, powered by Netmiko"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "takumina"}]
dependencies = ["netmiko>=4.0.0,<5.0.0", "pyyaml>=6.0.0,<7.0.0"]

[project.urls]
Repository = "https://github.com/takumina/clanet"

[project.optional-dependencies]
dev = ["pytest>=7.0.0", "ruff>=0.1.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.ruff.lint.isort]
known-first-party = ["clanet_cli"]
